--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,6 @@ input {
 }
 
 #root {
-  min-height: 100vh;
-  width: min(100%, 1200px);
-  margin: 0 auto;
+  min-height: 100svh;
+  width: 100%;
 }
